logs/validate.20260408-060230.log
Mode: isolate
Isolate: including Chap19 Chap28 Chap02
error: expected `,`
   --> src/Chap28/MaxContigSubSumDivConStEph.rs:340:28
    |
340 |                 by { assert(right.spec_index(i) == a.spec_index(mid as int + i)); };
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `crate::Chap28::MaxContigSubSumDivConStEph::MaxContigSubSumDivConStEph::lemma_divcon_combine`
  --> src/Chap28/MaxContigSubSumDivConMtEph.rs:25:9
   |
25 |     use crate::Chap28::MaxContigSubSumDivConStEph::MaxContigSubSumDivConStEph::lemma_divcon_combine;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `lemma_divcon_combine` in `Chap28::MaxContigSubSumDivConStEph::MaxContigSubSumDivConStEph`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
Elapsed: 1s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 24774MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
